--- a/data/settings.html
+++ b/data/settings.html
@@ -115,6 +115,11 @@
                                     <input type="number" class="form-control" id="thingSpeakReportingInterval" value="%THINGSPEAKREPORTINGINTERVAL%"
                                         placeholder="ThingSpeak reporting interval" name="thingSpeakReportingInterval" min="60">
                                 </div>
+                                <div class="form-group">
+                                    <label for="mqttPublishInterval">MQTT publishing interval: (min 5 seconds)</label>
+                                    <input type="number" class="form-control" id="mqttPublishInterval" value="%MQTTPUBLISHINTERVAL%"
+                                        placeholder="MQTT publishing interval" name="mqttPublishInterval" min="5">
+                                </div>
                                 <button type="submit" class="btn btn-primary">Save</button>
                             </form>
                         </td>
