--- a/data/weatherSettings.html
+++ b/data/weatherSettings.html
@@ -39,6 +39,12 @@
                                     <input type="text" class="form-control" id="weatherApiKey" value="%WEATHERAPIKEY%"
                                         placeholder="OpenWeather API Key" name="openWeatherApiKey">
                                 </div>
+                                <div class="form-check form-group">
+                                    <label class="form-check-label" for="check1">
+                                        <input type="checkbox" class="form-check-input" id="displayMetric" name="displayMetric" value="Metric"
+                                            %DISPLAYMETRIC%>Metric display for weather
+                                    </label>
+                                </div>
                                 <button type="submit" class="btn btn-primary">Save</button>
                             </form>
                         </td>
