--- a/data/settings.html
+++ b/data/settings.html
@@ -120,6 +120,11 @@
                                     <input type="number" class="form-control" id="mqttPublishInterval" value="%MQTTPUBLISHINTERVAL%"
                                         placeholder="MQTT publishing interval" name="mqttPublishInterval" min="5">
                                 </div>
+                                <div class="form-group">
+                                    <label for="printMonitorInterval">Print monitor interval: (min 15 seconds)</label>
+                                    <input type="number" class="form-control" id="printMonitorInterval" value="%PRINTMONITORINTERVAL%"
+                                        placeholder="Print monitor interval" name="printMonitorInterval" min="15">
+                                </div>
                                 <button type="submit" class="btn btn-primary">Save</button>
                             </form>
                         </td>
