Add a printer display name to settings page.

--- a/data/printMonitorSettings.html
+++ b/data/printMonitorSettings.html
@@ -55,6 +55,10 @@
                                         <label for="octoPrintAPIKey">OctoPrint API Key:</label>
                                         <input type="text" class="form-control" id="octoPrintAPIKey" value="%PRINTMONITORAPIKEY%" placeholder="API key" name="octoPrintAPIKey">
                                     </div>
+                                    <div class="form-group">
+                                        <label for="octoPrintDisplayName">Printer display name (not an OctoPrint setting, e.g. Ender 3)</label>
+                                        <input type="text" class="form-control" id="octoPrintDisplayName" value="%PRINTMONITORDISPLAYNAME%" placeholder="Display name" maxlength="64" name="octoPrintDisplayName">
+                                    </div>
                                 </div>
                                 <button type="submit" class="btn btn-primary">Save</button>
                             </form>
