Add mode 4 to display settings.

--- a/data/settings.html
+++ b/data/settings.html
@@ -32,19 +32,25 @@
                                     <div class="form-check">
                                         <label class="form-check-label" for="display1">
                                             <input type="radio" class="form-check-input" id="display1" name="optdisplay"
-                                                value="display1" %DISPLAY1CHECKED%>Mode 1 - summary
+                                                value="display1" %DISPLAY1CHECKED%>Mode 1 - weather summary
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="display2">
                                             <input type="radio" class="form-check-input" id="display2" name="optdisplay"
-                                                value="display2" %DISPLAY2CHECKED%>Mode 2 - 5 day forecast
+                                                value="display2" %DISPLAY2CHECKED%>Mode 2 - 5 day weather forecast
                                         </label>
                                     </div>
                                     <div class="form-check">
                                         <label class="form-check-label" for="display3">
                                             <input type="radio" class="form-check-input" id="display3" name="optdisplay"
-                                                value="display3" %DISPLAY3CHECKED%>Mode 3 - detailed current
+                                                value="display3" %DISPLAY3CHECKED%>Mode 3 - detailed current weather
+                                        </label>
+                                    </div>
+                                    <div class="form-check">
+                                        <label class="form-check-label" for="display4">
+                                            <input type="radio" class="form-check-input" id="display4" name="optdisplay"
+                                                value="display4" %DISPLAY4CHECKED%>Mode 4 - OctoPrint monitor
                                         </label>
                                     </div>
                                     </div>
